- setup ignores  - fixed tests  - switched to development version of zope3instance recipe

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = . 
+develop = . recipes/zope3instance
 parts = zope3 database instance test
 
 [zope3]
@@ -14,6 +14,7 @@ recipe = zc.recipe.zope3instance
 database = database
 user = admin:admin
 eggs = z3c.etestbrowser
+    lxml
 
 zcml = zope.app.securitypolicy-meta
     zope.app.twisted
@@ -22,6 +23,7 @@ zcml = zope.app.securitypolicy-meta
 [test]
 recipe = zc.recipe.testrunner
 eggs = z3c.etestbrowser
-working-directory = parts/instance
+    lxml
 extra-paths = parts/zope3/src
+working-directory = parts/instance
 defaults = ['--tests-pattern', '^f?tests$', '-v']
