- simplified buildout.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,6 @@ recipe = zc.recipe.zope3instance
 database = database
 user = admin:admin
 eggs = z3c.etestbrowser
-    lxml
 
 zcml = zope.app.securitypolicy-meta
     zope.app.twisted
@@ -22,8 +21,7 @@ zcml = zope.app.securitypolicy-meta
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = z3c.etestbrowser
-    lxml
+eggs = ${instance/eggs}
 extra-paths = parts/zope3/src
 working-directory = parts/instance
 defaults = ['--tests-pattern', '^f?tests$', '-v']
