--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,7 @@ zcml = zope.app.securitypolicy-meta
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = ${instance/eggs}
+eggs = ${instance:eggs}
 extra-paths = parts/zope3/src
 working-directory = parts/instance
 defaults = ['--tests-pattern', '^f?tests$', '-v']
