--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,27 +1,9 @@
 [buildout]
-develop = . recipes/zope3instance
-parts = zope3 database instance test
-
-[zope3]
-recipe = zc.recipe.zope3checkout
-url = svn://svn.zope.org/repos/main/Zope3/branches/3.3
-
-[database]
-recipe = zc.recipe.filestorage
-
-[instance]
-recipe = zc.recipe.zope3instance
-database = database
-user = admin:admin
-eggs = z3c.etestbrowser
-
-zcml = zope.app.securitypolicy-meta
-    zope.app.twisted
-    zope.app.authentication
+develop = .
+parts = test
+find-links = http://download.zope.org/distribution/
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = ${instance:eggs}
-extra-paths = parts/zope3/src
-working-directory = parts/instance
+eggs = z3c.etestbrowser [test]
 defaults = ['--tests-pattern', '^f?tests$', '-v']
