Get ready for release.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,11 @@
 [buildout]
 develop = .
 parts = test
-find-links = http://download.zope.org/distribution/
+versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = z3c.etestbrowser [test]
-defaults = ['--tests-pattern', '^f?tests$', '-v']
+
+[versions]
+lxml = 1.3.6
