Make tests pass with zope.app.wsgi 4.0.0a3
Require zope.app.wsgi >= 4.0dev (for allowTearDown=True) for tests.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,3 +5,9 @@ parts = test
 [test]
 recipe = zc.recipe.testrunner
 eggs = z3c.etestbrowser [test]
+
+[versions]
+# we need zope.app.wsgi >= 4.0dev, which requires these non-final versions
+zope.traversing = >= 4.0dev
+zope.publisher = >= 4.0dev
+zope.i18n = >= 4.0dev
