--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist =
 [testenv]
 deps =
     zope.app.testing
-    zope.app.wsgi>=3.8
+    zope.app.wsgi >= 4.0dev
     zope.app.zcmlfiles
     zope.app.server
     zope.testbrowser[test]
