Avoid eggs cluttering the working tree

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,8 @@ deps =
     zope.app.zcmlfiles
     zope.app.server
     zope.testbrowser[test]
+# install zope.app.pagetemplate explicitly to avoid
+# https://github.com/pypa/pip/issues/854
 commands =
+    pip install zope.app.pagetemplate
     python setup.py test -q
