Use zope.testrunner because we need layers
Using setup.py collects the tests but fails to call layer setup, causing
a strange error (no ftesting.zcml in the wrong location).

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
 
 [testenv]
 deps =
+    zope.testrunner
     zope.app.testing
     zope.app.wsgi >= 4.0dev
     zope.app.zcmlfiles
@@ -13,4 +14,4 @@ deps =
 # https://github.com/pypa/pip/issues/854
 commands =
     pip install zope.app.pagetemplate
-    python setup.py test -q
+    zope-testrunner --test-path=src
