Explicitly list dependencies we're referencing directly
This is a painfully long list because we have a painfully long sequence
of includes in ftesting.zcml, cargo-culted from zope.app.wsgi's
ftesting.zcml.

--- a/tox.ini
+++ b/tox.ini
@@ -6,11 +6,21 @@ envlist =
 deps =
     zope.testrunner
     zope.app.wsgi >= 4.0dev
-    zope.app.zcmlfiles
-    zope.app.server
     zope.testbrowser[test]
-# install zope.app.pagetemplate explicitly to avoid
-# https://github.com/pypa/pip/issues/854
+    zope.testing
+    zope.annotation
+    zope.app.appsetup
+    zope.app.publication
+    zope.authentication
+    zope.browserpage
+    zope.component
+    zope.container
+    zope.location
+    zope.principalregistry
+    zope.publisher
+    zope.security
+    zope.securitypolicy
+    zope.site
+    zope.traversing
 commands =
-    pip install zope.app.pagetemplate
     zope-testrunner --test-path=src
