--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
+sudo: false
+cache:
+  directories:
+    - .tox
 language: python
-python:
-    - 2.6
-    - 2.7
+env:
+    - TOXENV=py26
+    - TOXENV=py27
 install:
-    - pip install .
+    - travis_retry pip install tox
 script:
-    - python setup.py test -q
+    - tox
 notifications:
     email: false
