--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,3 +11,4 @@ eggs = z3c.etestbrowser [test]
 zope.traversing = >= 4.0dev
 zope.publisher = >= 4.0dev
 zope.i18n = >= 4.0dev
+zope.testbrowser = >= 4.0, < 5.0
