Use new API of zope.testbrowser >= 5.0.0.
- all browsertests are now using WSGI
- therefore remove the "simpler" FunctionalDocFileSuite with only ZCML layer

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,4 +11,4 @@ eggs = z3c.etestbrowser [test]
 zope.traversing = >= 4.0dev
 zope.publisher = >= 4.0dev
 zope.i18n = >= 4.0dev
-zope.testbrowser = >= 4.0, < 5.0
+zope.testbrowser = >= 5.0
