--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 # Configuration script to Travis-CI
+sudo: false
 language: python
 python:
     - 2.7
 install:
-    - pip install tox
+    - pip install tox-travis
 script:
-    - tox -e py${TRAVIS_PYTHON_VERSION//[.]/}
+    - tox
 notifications:
     email: false
