--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,5 @@ commands =
 
 [testenv:flake8]
 basepython = python2
-deps = {[testenv]deps}
-       flake8
+deps = flake8
 commands = flake8 src setup.py --doctests
