Clean up project.
* Store test dependencies in setup.py
* Fix author e-mail.
* Fix tests by pinning some maximum versions (They will be removed when solving #6.)
* Fix handling of empty responses.
* Update travis config.

--- a/tox.ini
+++ b/tox.ini
@@ -3,20 +3,12 @@ envlist =
     py27,flake8
 
 [testenv]
-deps =
-    zope.testrunner
-    zope.app.testing
-    zope.app.wsgi >= 4.0dev
-    zope.app.zcmlfiles
-    zope.app.server
-    zope.testbrowser[test]
-# install zope.app.pagetemplate explicitly to avoid
-# https://github.com/pypa/pip/issues/854
+extras = test
 commands =
-    pip install zope.app.pagetemplate
     zope-testrunner --test-path=src
 
 [testenv:flake8]
-basepython = python2
+basepython = python2.7
+skip_install = true
 deps = flake8
 commands = flake8 src setup.py --doctests
