Force second test job for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 matrix:
     include:
       - python: 2.7
+        name: "2.7"
+      - python: 2.7
         name: "Flake8"
         install:  pip install -U flake8
         script: flake8 --doctests src setup.py
