--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-.installed.cfg
+*.egg-info
+*.pyc
 .Python
-include/
-lib/
+.coverage
+.installed.cfg
+.tox/
+__pycache__
 bin/
 develop-eggs/
 eggs/
-*.egg-info
-*.pyc
-__pycache__
-.tox/
+include/
+lib/
