--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,21 @@
 [tox]
 envlist =
+    flake8,
     py27,
-    flake8
+    coverage,
 
 [testenv]
 extras = test
 commands =
     zope-testrunner --test-path=src
+
+[testenv:coverage]
+basepython = python2.7
+commands =
+    coverage run -m zope.testrunner --test-path=src {posargs:--auto-color -vv}
+    coverage report --fail-under=92
+extras = test
+deps = coverage
 
 [testenv:flake8]
 basepython = python2.7
