Clean up tox.ini.

--- a/tox.ini
+++ b/tox.ini
@@ -14,11 +14,10 @@ basepython = python2.7
 commands =
     coverage run -m zope.testrunner --test-path=src {posargs:--auto-color -vv}
     coverage report --fail-under=92
-extras = test
 deps = coverage
 
 [testenv:flake8]
 basepython = python2.7
 skip_install = true
 deps = flake8
-commands = flake8 src setup.py --doctests
+commands = flake8 src setup.py
