Add support for Python 3.
This requires to drop `.browser.ExtendedTestBrowser.pretty_print`
as its requirements are deprecated (`formatter`) or even removed from
Python's StdLib (htmllib).

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 # Configuration script for Travis-CI
 language: python
+dist: xenial
 python:
   - 2.7
+  - 3.6
+  - 3.7
+  - 3.8
 matrix:
   include:
     - python: 2.7
-      name: "2.7"
-    - python: 2.7
       name: "Flake8"
       install:  pip install -U flake8
-      script: flake8 --doctests src setup.py
+      script: flake8 src setup.py
       after_success:
 install:
   - pip install -U pip setuptools zope.testrunner
