--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,9 @@ basepython = python3.7
 commands =
     coverage run -m zope.testrunner --test-path=src {posargs:--auto-color -vv}
     coverage report --show-missing --fail-under=93
-deps = coverage
+deps =
+    coverage
+    coverage-python-version
 
 [testenv:flake8]
 basepython = python2.7
