Render coverage html.

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ basepython = python3.7
 commands =
     coverage run -m zope.testrunner --test-path=src {posargs:--auto-color -vv}
     coverage report --show-missing --fail-under=93
+    coverage html
 deps =
     coverage
     coverage-python-version
