Add support for Python 3. (#12)
* Add support for Python 3. (This requires to drop `.browser.ExtendedTestBrowser.pretty_print` as its requirements are deprecated (`formatter`) or even removed from Python's StdLib (htmllib).)

* Drop test dependency on `zope.app.zcmlfiles` and `zope.app.server`. (This change reduces the test dependencies from 104 to 63.)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 # Configuration script for Travis-CI
 language: python
+dist: xenial
 python:
   - 2.7
+  - 3.6
+  - 3.7
 matrix:
   include:
-    - python: 2.7
-      name: "2.7"
-    - python: 2.7
+    - python: 3.7
       name: "Flake8"
       install:  pip install -U flake8
-      script: flake8 --doctests src setup.py
+      script: flake8 src setup.py
       after_success:
 install:
   - pip install -U pip setuptools zope.testrunner
-  - pip install -U coveralls coverage
+  - pip install -U coveralls coverage coverage-python-version
   - pip install -U -e ".[test]"
 script:
   - coverage run -m zope.testrunner --test-path=src --auto-color
