--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include *.py
+include *.rst
 include *.txt
 include .coveragerc
 include buildout.cfg
@@ -6,4 +7,5 @@ include tox.ini
 
 recursive-include src *.pt
 recursive-include src *.txt
+recursive-include src *.rst
 recursive-include src *.zcml
