--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,24 @@
-*.egg-info
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
+*.egg-info/
+*.profraw
 *.pyc
-.Python
+*.pyo
 .coverage
+.coverage.*
+.eggs/
 .installed.cfg
+.mr.developer.cfg
 .tox/
-__pycache__
+__pycache__/
 bin/
+build/
+coverage.xml
 develop-eggs/
+dist/
+docs/_build
 eggs/
-htmlcov/
-include/
 lib/
+lib64
+parts/
+pyvenv.cfg
