--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,67 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [tox]
+minversion = 3.18
 envlist =
-    flake8,
-    py27,
-    py36,
-    py37,
-    coverage,
+    lint
+    py27
+    py35
+    py36
+    py37
+    py38
+    py39
+    coverage
 
 [testenv]
-extras = test
+usedevelop = true
+deps =
+    zope.testrunner
 commands =
-    zope-testrunner --test-path=src
+    zope-testrunner --test-path=src []
+extras =
+    test
+
+[testenv:lint]
+basepython = python3
+skip_install = true
+deps =
+    flake8
+    check-manifest
+    check-python-versions
+commands =
+    flake8 src setup.py
+    check-manifest
+    check-python-versions
 
 [testenv:coverage]
-basepython = python3.7
-commands =
-    coverage run -m zope.testrunner --test-path=src {posargs:--auto-color -vv}
-    coverage report --show-missing --fail-under=93
-    coverage html
+basepython = python3
+allowlist_externals =
+    mkdir
 deps =
     coverage
     coverage-python-version
+    zope.testrunner
+commands =
+    mkdir -p {toxinidir}/parts/htmlcov
+    coverage run -m zope.testrunner --test-path=src []
+    coverage html
+    coverage report -m --fail-under=93
 
-[testenv:flake8]
-basepython = python3.7
-skip_install = true
-deps = flake8
-commands = flake8 src setup.py
+[coverage:run]
+branch = True
+plugins = coverage_python_version
+source = src
+
+[coverage:report]
+precision = 2
+exclude_lines =
+    pragma: no cover
+    pragma: nocover
+    except ImportError:
+    raise NotImplementedError
+    if __name__ == '__main__':
+    self.fail
+    raise AssertionError
+
+[coverage:html]
+directory = parts/htmlcov
